--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,46 +4,51 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/spacelab/bootstrap.min.css" integrity="sha512-NWw8XgTx2tYA5oEZwBrmyH8bg37mh4bIjeV4OLWwqI3ipQ0ITyiWTFdG295uz2lMy+QO9DszNZwta4m4mJpnmw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        {% endblock %}
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/lumen/bootstrap.min.css" integrity="sha512-N6Wwrw2+w72hDf55YI/j+y3JUXpO7qTuo+kilvcpFJqEabBFA3nurVZineUcg4+op0dJLrzQXcNNif9Gf/ECPA==" crossorigin="anonymous" referrerpolicy="no-referrer" />        {% endblock %}
     </head>
     <body>
         {% block header %}
-            <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path('realEstate.home') }}">Real Estate 92</a>
+    <a class="navbar-brand" href="{{ path('home') }}">Real Estate 92</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
+       {% if app.user %}
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('realEstate.home') }}">Home
+          <a class="nav-link" href="{{ path('realEstate.new') }}">Add new estate 🏡 🏬</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('realEstate.home') }}">My Real Estates</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('fav.show') }}">Favourites 😍</a>
+        </li>
+        {% else %}
+         <li class="nav-item">
+          <a class="nav-link" href="{{ path('user.new') }}">Create a new account 🏡
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('realEstate.new') }}">Add new 🏡 🏬</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
+       {% endif %}   
       </ul>
     </div>
     {% if app.user is null %}
-    <div class="d-flex me-3">
+    <div class="d-flex me-3 text-white">
           <a class="nav-link" href="{{ path('security.login') }}">LogIn</a>
     </div>
     {% else %}
-    <div class="d-flex align-items-center column-gap-4 me-3">
-        <a>{{ app.user.username }}</a>
-          <a class="nav-link text-body-emphasis" href="{{ path('security.logout') }}">LogOut</a>
+    <div class="d-flex align-items-center column-gap-4 me-3 ">
+        <p class=".text-dark-emphasis m-0">Hello {{ app.user.username }}</p>
+          <a class="btn btn-danger " href="{{ path('security.logout') }}">Logout</a>
     </div>
     {% endif %}
   </div>
 </nav>
-        {% endblock %}
-        {% block body %}
-        {% endblock %}
+{% endblock %}
+{% block body %}
+{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
