--- a/templates/realEstate/index.html.twig
+++ b/templates/realEstate/index.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Real Estate 92 - Accueil{% endblock %}
 
 {% block body %}
-<div class="container d-flex justify-content-center flex-wrap column-gap-5">
-  <h3>Most recents real estates:</h3>
+<div class="container d-flex justify-content-center flex-wrap column-gap-5 mb-5">
 {% for realEstate in realEstates %}
 <div class="card mt-5 w-25">
-    <h3 class="card-header">ID: {{ realEstate.id}}</h3>
+    <h3 class="card-header bg-primary">ID: {{ realEstate.id}}</h3>
       {% if not realEstate.name %}
     <div class="hidden"></div>
       {% else %}
@@ -21,10 +20,10 @@
     </div>
     <div class="card-body">
         <p class="card-text">Price: {{ realEstate.price }} $</p>
-        <a class="btn btn-secondary" href="{{ path('realEstate.edit', {'id': realEstate.id}) }}">Edit 🖊️</a>
+        <a class="btn btn-info" href="{{ path('realEstate.edit', {'id': realEstate.id}) }}">Edit 🖊️</a>
         <a class="btn btn-danger" href="{{ path('realEstate.delete', {'id': realEstate.id}) }}">Delete ❌</a>
     </div>
-    <div class="card-footer text-muted">
+    <div class="card-footer text-muted bg-primary">
        {{ realEstate.createdAt | date("m/Y") }}
     </div>
 </div>
