--- a/templates/realEstate/edit.html.twig
+++ b/templates/realEstate/edit.html.twig
@@ -30,7 +30,7 @@
     <div class="mt-4">
         {{ form_row(form.imageFile) }}
     </div>
-    {{ form_row(form.submit, { 'label': 'Edit !' }) }}
+    {{ form_row(form.submit, { 'label': 'Modifier !' }) }}
 {{ form_end(form) }}
 </div>
  
