--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -17,7 +17,7 @@
         {{ form_errors(form.plainPassword) }}
         {{ form_widget(form.plainPassword) }}
     </div>
-    {{ form_row(form.submit, { 'label': 'Create your account !' }) }}
+    {{ form_row(form.submit, { 'label': 'Créer un compte' }) }}
 {{ form_end(form) }}
 </div>
  
