--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,21 +2,20 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h3 class="mt-3">Hey !<br>Welcome to our new website to discover a lot of houses and flats around the world !</h3>
-    <p class="mt-5">Here you can share with our community and show your beautifull real Estates.</p>
-    <p>At first you must to create a new account to access in the private session and you will add your first biens.</p>
+    <h2>Bienvenue sur Real Estate 92</h2>
+<p>Découvrez votre futur chez-vous avec Real Estate 92. Notre plateforme en ligne vous offre une expérience immersive pour trouver, vendre ou louer des biens immobiliers de qualité dans les régions que vous aimez. <br> Trouvez votre Résidence Idéale et explorez notre vaste catalogue de propriétés, allant des appartements élégants en centre-ville aux maisons de campagne pittoresques. Utilisez nos filtres de recherche avancés pour affiner vos critères et trouver la maison ou l'appartement parfaitement adapté à votre style de vie.</p>
 </div>
 <div>
-    <h3>Some of recents Real Estates</h3>
+    <h3>Voici les dernieres tendances:</h3>
 <div>
-        {% for realEstate in realEstates %}
+{% for realEstate in realEstates %}
     <div class="card mt-5 w-25">
         <h3 class="card-header bg-primary">ID: {{ realEstate.id}}</h3>
         {% if not realEstate.name %}
-        <div class="hidden"></div>
+            <div class="hidden"></div>
         {% else %}
         <div class="card-body">
-        <h5 class="card-title">{{ realEstate.name}}</h5>
+            <h5 class="card-title">{{ realEstate.name}}</h5>
         </div>
     {% endif %}
         <img src="{{ vich_uploader_asset (realEstate, 'imageFile') }}" height="230px">
@@ -24,16 +23,16 @@
             <p class="card-text">{{ realEstate.description }}</p>
         </div>
         <div class="card-body">
-            <p class="card-text">Price: {{ realEstate.price }} $</p>
+            <p class="card-text">Prix: {{ realEstate.price }} $</p>
             {% if app.user %}
-            <a class="btn btn-info" href="{{ path('fav.new', {'id': realEstate.id})}}">Add to Favourites !</a>
+                <a class="btn btn-info" href="{{ path('fav.new', {'id': realEstate.id})}}">Ajouter aux Favoris !</a>
             {% endif %}
         </div>
         <div class="card-footer text-muted bg-primary">
-        {{ realEstate.createdAt | date("m/Y") }}
+            {{ realEstate.createdAt | date("m/Y") }}
         </div>
     </div>
-    {% endfor %}
+{% endfor %}
 </div>
 </div>
 {% endblock %}
