--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Real Estate 92 -- Login{% endblock %}
+{% block title %}Real Estate 92 -- Connexion{% endblock %}
 
 {% block body %}
-
+{% for message in app.flashes('logout') %}
+    <div class="alert alert-danger">
+        {{ message }}
+    </div>
+{% endfor %}
 <div class="container mt5">
        {% if error %}
             <div class="alert alert-danger mt-5">{{ error.messageKey | trans(error.messageData, 'security') }}</div>
@@ -11,14 +15,14 @@
 <form action="{{ path('security.login') }}" method="POST" name="loginForm">
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
     <div>
-      <label for="username" class="form-label mt-4">Email adress</label>
-      <input type="email" class="form-control" id="username" name="_username" placeholder="Enter email">
+      <label for="username" class="form-label mt-4">Adresse email:</label>
+      <input type="email" class="form-control" id="username" name="_username" placeholder="realestate@exemple.fr">
     </div>
     <div>
-      <label for="password" class="form-label mt-4">Password</label>
+      <label for="password" class="form-label mt-4">Mot de passe:</label>
       <input type="password" class="form-control" id="password" placeholder="******" name="_password" autocomplete="off">
     </div>
-    <button type="submit" class="btn btn-secondary mt-5">Log In</button>
+    <button type="submit" class="btn btn-primary mt-5">Se connecter 👈🏻</button>
 </form>
 </div>
 {% endblock %}
